# interface_experanto_temporaldata

./: .gitignore  README.md  pyproject.toml
Interface/: Interface.py  InterfaceExperiment.py  InterfaceInterpolators.py  __init__.py
example_pipelines/Experanto/: experanto_test_pipeline.py
example_pipelines/Temporaldata/: create_pipeline_example.py
example_pipelines/Temporaldata/configs/: train_interface_data.yaml
example_pipelines/Temporaldata/datasets/: interface_dataset.py
interface_experanto_temporaldata/: Interface.py  __init__.py
tests/: tests_conversions.ipynb
